ACCUMULO-2944 Fixes harded coded Sun JVM in config and env
ACCUMULO-2944 Addressing the issue raised in JIRA 2944, this is
ensuring that Accumulo will be correctly configured for any Java
vendor.

A new question is being asked in the bootstrap_config.sh for Java
vendor. This is then used to set GC settings, exclude/include JAXP
implementation in ACCUMULO_OPTS. Also, default NRG provider is
being injected as system property on command line since IBM JVM does
not have SUN registered as default provider.